--- a/app/views/expeditions/edit.html.erb
+++ b/app/views/expeditions/edit.html.erb
@@ -11,43 +11,47 @@
 }
 </style>
 
-<%= button_tag "Start Geolocation", id: "startLocate" %>
-<%= button_tag "Stop Geolocation", id: "stopLocate" %>
+<div class="one wide column"></div>
+<div class="four wide column"><%= button_tag "Start Geolocation", id: "startLocate" %></div>
+<div class="three wide column">
+  <%= form_for [@expedition, @annotation], html: {id: "submitImage"}, remote: true, method: :post do |f| %>
+    <%= f.label "Upload an Image" %><br>
+    <%= f.file_field :image %><br>
+    <%= f.submit "Add Image" %>
+  <% end %>
+</div>
+<div class="three wide column">
+  <%= form_for [@expedition, @annotation], html: {id: "submitRecording"}, remote: true, method: :post do |f| %>
+    <%= f.label "Upload a Recording" %><br>
+    <%= f.file_field :recording %><br>
+    <%= f.submit "Add Recording" %>
+  <% end %>
+</div>
+<div class="four wide column"><%= button_tag "Stop Geolocation", id: "stopLocate" %></div>
+<div class="one wide column"></div>
 
-<div id="map"></div>
-<hr>
-<br>
-<p>Latitude: <span id="latitude"></span></p>
-<p>Longitude: <span id="longitude"></span></p>
-<p>Accuracy: <span id="accuracy"></span></p>
-<p>Heading: <span id="compass"></span>°</p>
-<p>Distance Travelled: <span id="distance"></span>m</p>
-<br>
-
-
-<%= form_for @expedition, html: {id: "submitTitle"}, remote: true, method: :patch do |f| %>
-  <%= f.label :title %><br>
-  <%= f.text_area :title %><br>
-  <%= f.submit %>
-<% end %>
-<br>
-<%= form_for @expedition, html: {id: "submitDescription"}, remote: true, method: :patch do |f| %>
-  <%= f.label :desciption %><br>
-  <%= f.text_area :description %><br>
-  <%= f.submit %>
-<% end %>
-<br>
-<%= form_for [@expedition, @annotation], html: {id: "submitImage"}, remote: true, method: :post do |f| %>
-  <%= f.label "Upload an Image" %><br>
-  <%= f.file_field :image %><br>
-  <%= f.submit "Add Image" %>
-<% end %>
-<br>
-<%= form_for [@expedition, @annotation], html: {id: "submitRecording"}, remote: true, method: :post do |f| %>
-  <%= f.label "Upload a Recording" %><br>
-  <%= f.file_field :recording %><br>
-  <%= f.submit "Add Recording" %>
-<% end %>
+<div class="three wide column">
+  <p>Latitude: <span id="latitude"></span></p>
+  <p>Longitude: <span id="longitude"></span></p>
+  <p>Accuracy: <span id="accuracy"></span></p>
+  <p>Heading: <span id="compass"></span>°</p>
+  <p>Distance: <span id="distance"></span>m</p>
+  <p><span id="info"></span></p>
+  <br>
+  <%= form_for @expedition, html: {id: "submitTitle"}, remote: true, method: :patch do |f| %>
+    <%= f.label :title %><br>
+    <%= f.text_area :title %><br>
+    <%= f.submit %>
+  <% end %>
+  <br>
+  <%= form_for @expedition, html: {id: "submitDescription"}, remote: true, method: :patch do |f| %>
+    <%= f.label :desciption %><br>
+    <%= f.text_area :description %><br>
+    <%= f.submit %>
+  <% end %>
+</div>
+<div class="twelve wide column"><div id="map"></div></div>
+<div class="one wide column"></div>
 
 <script src="/assets/fulltilt-min.js"></script>
 
@@ -156,10 +160,19 @@ window.onload = function () {
             id: <%= @expedition.id %>
           }
         });
+      }, function error(msg){
+        $("#error").html(msg);
+        console.log(msg);
+      }, {
+        timeout: 10000,
+        maximumAge:900,
+        enableHighAccuracy: true
       });
     }
     timer = setTimeout(locate, 1000);
   }
+
+
 
   $('#startLocate').on("click", function () {
     locate();
